# swarm_rag

./: .gitattributes  .gitignore  PLAN.md  README.md  Swarm_RAG_vs_GraphFlow_A_B_Test.ipynb  requirements.txt
experiments/config/: hyperparameters.yaml
experiments/core/: ingest_adapter.py  ingestor.py  metrics.py
experiments/scripts/: benchmark.py  ingest_cli.py
experiments/swarm_rag/: heuristic_strategies.py  swarm_retriever.py
reference_code/: Swarm_RAG_vs_GraphFlow_A_B_Test.ipynb
stark/: load_stark.py  test.ipynb  test_swarm_on_stark.py
stark_experiments/core/: ingestor.py  metrics.py  swarm_retriever.py
stark_experiments/scripts/: ingest_stark_prime.py
swarm_rag_module/: pyproject.toml
swarm_rag_module/swarm_rag/: __init__.py  utils.py
swarm_rag_module/swarm_rag/config/: config_loader.py
swarm_rag_module/swarm_rag/core/: __init__.py  heuristics.py  swarm_retriever.py
swarm_rag_module/swarm_rag/eval/: __init__.py  metrics.py  report.py
swarm_rag_module/swarm_rag/integrations/: cohere_embed.py  stark.py
swarm_rag_module/swarm_rag/interfaces/: __init__.py  base.py
swarm_rag_module/tests/: test_swarm.py
